--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,8 @@ body{
         }
     }
     i{
-        color: orangered;
+        color: black;
+        font-weight: 900;
+        font-size: xx-large;
     }
 }
