--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,8 +27,13 @@ body{
         }
     }
     i{
-        color: black;
+        color: white;
         font-weight: 900;
-        font-size: xx-large;
+        font-size: small;
+    }
+    small{
+        color: white;
+        font-weight: 900;
+        font-size: medium;
     }
 }
